--- a/koIor/index.html
+++ b/koIor/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
       <div class="navbarContainer"> 
         <a href="#home" id="navbarLogo">kolor</a>
-        <div class="nabarToggle" id="mobile-menu">
+        <div class="navbarToggle" id="mobileMenu">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
@@ -32,11 +32,9 @@
           <li class="navbarItem">
             <a href="#signUp" class="button" id="signUp">Sign up</a>
           </li>
-
         </ul>
-
-      </div>
-    </nav>
+ </div>
+</nav>
   </body>
 </html>
 <!--
