--- a/Real Phone/html.html
+++ b/Real Phone/html.html
@@ -25,6 +25,15 @@
             </ul>
             </div>
         </nav>
+
+        <div class="information"></div>
+            <div id="circle">
+                <div class="feature"></div>
+                <div class="feature"></div>
+                <div class="feature"></div>
+                <div class="feature"></div>
+            </div>
+
     </div>
 </body>
 </html>
