--- a/Real Phone/html.html
+++ b/Real Phone/html.html
@@ -1,39 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="main">
-        <nav>
-            <div class="logo">
-                <img src="img/logo.png" alt="">
-            </div>
+      <nav>
+        <div class="logo">
+          <img src="img/logo.png" alt="" />
+        </div>
 
-            <div class="nav-links">
-                <ul>
-                    <li>
-                    <a href="#home">Home</a>
-                    <a href="#phone">Phone</a>
-                    <a href="#accessories">Accessories</a>
-                    <a href="#cart">Cart</a>
-                </li>
-            </ul>
-            </div>
-        </nav>
+        <div class="nav-links">
+          <ul>
+            <li>
+              <a href="#home">Home</a>
+              <a href="#phone">Phone</a>
+              <a href="#accessories">Accessories</a>
+              <a href="#cart">Cart</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-        <div class="information"></div>
-            <div id="circle">
-                <div class="feature"></div>
-                <div class="feature"></div>
-                <div class="feature"></div>
-                <div class="feature"></div>
-            </div>
-
+      <div class="information"></div>
+      <div id="circle">
+        <div class="feature one">
+          <img src="img/camera.png" alt="camera">
+          <div>
+          <h1>Camrea</h1>
+          <p>12MP, Wide Angle Lens</p>
+          </div>  
+        </div>
+        <div class="feature two">
+            <img src="img/processor.png" alt="processor">
+            <div>
+          <h1>Camrea</h1>
+          <p>12MP, Wide Angle Lens</p>
+          </div> 
+        </div>
+        <div class="feature three">
+            <img src="img/display.png" alt="display">
+            <div>
+          <h1>Camrea</h1>
+          <p>12MP, Wide Angle Lens</p>
+          </div> 
+        </div>
+        <div class="feature four">
+            <img src="img/battery.png" alt="battery">
+            <div>
+          <h1>Camrea</h1>
+          <p>12MP, Wide Angle Lens</p>
+          </div> 
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
