--- a/Real Phone/html.html
+++ b/Real Phone/html.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- <script src="index.js" defer></script> -->
   </head>
   <body>
     <div class="main">
@@ -26,37 +27,47 @@
         </div>
       </nav>
 
-      <div class="information"></div>
+      <div class="information">
+        <img src="img/mobile.png" alt="" class = "mobile">
+      
       <div id="circle">
         <div class="feature one">
           <img src="img/camera.png" alt="camera">
           <div>
-          <h1>Camrea</h1>
+          <h1>Camera</h1>
           <p>12MP, Wide Angle Lens</p>
           </div>  
         </div>
         <div class="feature two">
             <img src="img/processor.png" alt="processor">
             <div>
-          <h1>Camrea</h1>
-          <p>12MP, Wide Angle Lens</p>
+          <h1>Processor</h1>
+          <p>Snapdragon Octe-core 11nm</p>
           </div> 
         </div>
         <div class="feature three">
             <img src="img/display.png" alt="display">
             <div>
-          <h1>Camrea</h1>
-          <p>12MP, Wide Angle Lens</p>
+          <h1>Display</h1>
+          <p>6.5" Mini-Drop Fullscreen</p>
           </div> 
         </div>
         <div class="feature four">
             <img src="img/battery.png" alt="battery">
             <div>
-          <h1>Camrea</h1>
-          <p>12MP, Wide Angle Lens</p>
+          <h1>Battery Life</h1>
+          <p>5000mAh, 720Hrs Standby</p>
           </div> 
+          </div>
         </div>
       </div>
+
+      <div class="controls">
+        <img src="img/arrow.png" alt="" id="#upBtn">
+        <h3>Features</h3>
+        <img src="img/arrow.png" alt="" id="#downBtn">
+      </div>
     </div>
+    <script src="index.js" ></script>
   </body>
 </html>
