--- a/Real Phone/html.html
+++ b/Real Phone/html.html
@@ -19,7 +19,7 @@
           <ul>
             <li>
               <a href="#home">Home</a>
-              <a href="#phone">Phone</a>
+              <a href="#phone">Phone</a>  
               <a href="#accessories">Accessories</a>
               <a href="#cart">Cart</a>
             </li>
@@ -27,7 +27,8 @@
         </div>
       </nav>
 
-      <div class="information">
+      <div class="information" >
+        <div class="overlay"></div>
         <img src="img/mobile.png" alt="" class = "mobile">
       
       <div id="circle">
@@ -63,11 +64,12 @@
       </div>
 
       <div class="controls">
-        <img src="img/arrow.png" alt="" id="#upBtn">
+        <img src="img/arrow.png" alt="" id="upBtn">
         <h3>Features</h3>
-        <img src="img/arrow.png" alt="" id="#downBtn">
+        <img src="img/arrow.png" alt="" id="downBtn">
       </div>
     </div>
-    <script src="index.js" ></script>
+   
   </body>
+   <script src="index.js" ></script>
 </html>
