--- a/SAHARA/html.html
+++ b/SAHARA/html.html
@@ -31,25 +31,28 @@
         <div class="row">
         <div class="col">
             <h1>Sahara</h1>
-            <p>Some text-------></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
+molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
+numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
+optio, eaque rerum!</p>
             <button type="button">Explore</button>
         </div>
         <div class="col">
             <div class="card card1">
                 <h5>Western Desert</h5>
-                 <p>Gn/rwglkrwmglknrwgnjwrngnwrngrwjgjngrjngjnggrrkgrnglnrlgnkfmlkmg</p>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="card card2">
                 <h5>AI Bagawat</h5>
-                 <p>Gn/rwglkrwmglknrwgnjwrngnwrngrwjgjngrjngjnggrrkgrnglnrlgnkfmlkmg</p>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="card card3">
                 <h5>Pyramid of Giza</h5>
-                 <p>Gn/rwglkrwmglknrwgnjwrngnwrngrwjgjngrjngjnggrrkgrnglnrlgnkfmlkmg</p>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="card card4">
                 <h5>Kalahari Desert</h5>
-                 <p>Gn/rwglkrwmglknrwgnjwrngnwrngrwjgjngrjngjnggrrkgrnglnrlgnkfmlkmg</p>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
     </div>
