--- a/SAHARA/html.html
+++ b/SAHARA/html.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>SAHARA</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;
@@ -29,7 +29,7 @@
         </nav>
 
         <div class="row">
-        <div class="col">
+        <div class="col" id="hFivePB">
             <h1>Sahara</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
 molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
@@ -38,19 +38,19 @@ optio, eaque rerum!</p>
             <button type="button">Explore</button>
         </div>
         <div class="col">
-            <div class="card card1">
+            <div class=" col card card1">
                 <h5>Western Desert</h5>
                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <div class="card card2">
+            <div class=" col card card2">
                 <h5>AI Bagawat</h5>
                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <div class="card card3">
+            <div class=" col card card3">
                 <h5>Pyramid of Giza</h5>
                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <div class="card card4">
+            <div class=" col card card4">
                 <h5>Kalahari Desert</h5>
                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
