--- a/SAHARA/html.html
+++ b/SAHARA/html.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="navbar">
+        <!-- <div class="navbar">
             <img src="img/logo.png" alt="img" class = "logo">
-        </div>
+        
         <nav>
             <table>
                 <tr>
@@ -27,8 +27,26 @@
             </table>
             
         </nav>
+        </div> -->
 
-        <div class="row">
+        <nav>
+        <div class="logo">
+          <img src="img/logo.png" alt="" />
+        </div>
+
+        <div class="nav-links">
+          <ul>
+            <li>
+              <a href="#home" class="navElem">HOME</a>
+              <a href="#region" class="navElem">REGION</a>  
+              <a href="#about" class="navElem">ABOUT</a>
+              <img src="img/menu.png" class = "menu-icon navElem">
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+    <div class="row">
         <div class="col" id="hFivePB">
             <h1>Sahara</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
