--- a/coventic/html.html
+++ b/coventic/html.html
@@ -10,9 +10,19 @@
   <body>
     <div id="container">
       <div id="mostPart">
+        <div id="map">
+          <div id="logo">
+            <img src="img/logo.png" alt="logo">
+          </div>
+          <button>Sign up</button>
+        </div>
+        <div id="main"></div>
 
       </div>
-      
+      <div id="nav">
+
+      </div>
+
     </div>
 
     <script src="index.js"></script>
