--- a/Sinai/html.html
+++ b/Sinai/html.html
@@ -61,9 +61,9 @@
           </li>
         </ul>
 
-        <div class="content__nature">
-          <img src="img/animals.jpg" alt="" />
-          <p>
+        <ul class="content__nature">
+          <li class="big_img"><img class="big_img" src="img/animals.jpg" alt="" /></li>
+          <li>
             Sinai’s allure is legendary. Its spectacular landscapes, thriving
             flora and fauna, and unique history, the store of centuries, have
             long held sway in the imagination of millions. The high mountains
@@ -72,8 +72,8 @@
             vipers, lizards, and tortoises are just some of the animals that
             make their home in the north, which is characterized by lagoons and
             vast dunes of soft sand.
-          </p>
-        </div>
+          </li>
+        </ul>
 
         <div class="content__sources">
           <a href="https://en.wikipedia.org/wiki/Mount_Sinai"></a>
