--- a/koIor/index.html
+++ b/koIor/index.html
@@ -33,6 +33,8 @@
             <a href="#signUp" class="button" id="signUp">Sign up</a>
           </li>
         </ul>
+
+        <!-- <script src="https://kit.fontawesome.com/718976bdbb.js" crossorigin="anonymous"></script> -->
  </div>
 </nav>
   </body>
