--- a/Sinai/html.html
+++ b/Sinai/html.html
@@ -30,6 +30,7 @@
     
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="adaptive_halfscreen.css" />
+    <link rel="stylesheet" href="adaptive_iphonse.css">
   </head>
   <body>
 
@@ -40,12 +41,13 @@
         <p>T  r  a  v  e  l</p>
       </div>
       
-      <div class="links">
-        <a href="" class="link">Home</a>
-        <a href="" class="link">Gallery</a>
-        <a href="" class="link">Explore</a>
-        <a href="" class="link">Contact</a>
-      </div>
+      <ul class="links">
+        <li class="link"><a href="" >Home</a></li>
+        <li class="link"><a href="" >Gallery</a></li>
+        <li class="link"><a href="">Explore</a></li>
+        <li class="link"><a href="" >Contact</a></li>
+        <li class="link"><a href="" id = "sign_up">Sign up</a></li>
+      </ul>
       </div>
 
       <div class="middle_bar">
