--- a/Sinai/html.html
+++ b/Sinai/html.html
@@ -46,8 +46,10 @@
         <li class="link"><a href="" >Gallery</a></li>
         <li class="link"><a href="">Explore</a></li>
         <li class="link"><a href="" >Contact</a></li>
-        <li class="link"><a href="" id = "sign_up">Sign up</a></li>
       </ul>
+
+      <a href="" id = "sign_up">Sign up</a>
+
       </div>
 
       <div class="middle_bar">
