--- a/Sinai/sights/html.html
+++ b/Sinai/sights/html.html
@@ -11,12 +11,12 @@
 
     <div class="container">
 
-      <div class="gallery">
+      <ul class="gallery">
         <img src="" alt="" class="gimg">
         <img src="" alt="" class="gimg">
         <img src="" alt="" class="gimg">
         <img src="" alt="" class="gimg">
-      </div>
+      </ul>
 
     </div>
 
